Fix text alignment

--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -11,6 +11,7 @@
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   padding-bottom: 10%;
+  text-align: left;
 
   @include respond(tab-land) {
     height: 100%;
